# vit-quant

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: conda.sh  docker.sh  get_imagenet.py  setup_links.sh
src/: main.cpp  main.py
src/analysis/: hook.py
src/dataset/: base.py  imagenet.py
src/kernels/: binding.cpp  binding.cu  common.cuh  gemmsb_coalesced.cuh  sgemmsb_cublas.cu  sgemmsb_cublas.cuh  tensor.hpp  vadd.cu  vadd.cuh
src/utils/: evaluate.py  plot.py
src/vit_quant/: __init__.py
tests/dataset/: imagenet.py  test_imagenet.py
tests/kernels/: gemmsb.py  sgemmsb_cublas.py  vadd.py
