[project]
name = "vit-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yu-Ting Shi", email = "nn6124030@gs.ncku.edu.tw" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vit-quant = "vit_quant:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=3"]
build-backend = "scikit_build_core.build"
